--- a/style.css
+++ b/style.css
@@ -12,9 +12,50 @@ body {
 }
 
 #calculator {
-  height: 480px;
-  width: 320px;
+  height: 640px;
+  width: 400px;
+
   display: flex;
+  flex-direction: column;
+
   border: 2px solid black;
   border-radius: 16px;
+  padding: 8px;
+}
+
+#display {
+  flex: 1;
+
+  border: 2px solid darkgrey;
+  border-radius: 8px;
+  margin: 4px 4px 8px;
+}
+
+#buttons {
+  display: flex;
+  justify-content: space-between;
+
+  flex: 4;
+}
+
+#numbers {
+  flex: 3;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.numbers-row {
+  display: flex;
+  flex: 1;
+}
+
+#operations {
+  flex: 1;
+}
+
+button {
+  flex: 1;
+
+  margin: 4px;
 }
